--- a/main.html
+++ b/main.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Sort Without Articles</title>
+    <title>Band List</title>
   </head>
   <body>
     <style>
@@ -41,7 +41,7 @@
       }
     </style>
 
-    <ul></ul>
+    <ul id="band"></ul>
 
     <script type="text/javascript" src="./script.js"></script>
   </body>
