--- a/main.html
+++ b/main.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Band List</title>
+    <title>Band Names</title>
   </head>
   <body>
     <style>
